<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ulises Map</string>
    <string name="action_settings">Settings</string>
    <string name="button_map">Map</string>
    <string name="button_route">Routes</string>
    <string name="button_point">Points of Interes</string>
    <string name="loadMessage">Loading data...</string>
    <string name="check_internet_conn">No internet connection detected. Switch on internet and try again</string>

    <!-- ListView -->
    <string name="ok">OK</string>
    
    <!-- MenuActivity -->
    <string name="not_points">This city not has points</string>
    <string name="not_routes">This city not has routes</string>
	
    <!--  LoginActivity -->
    <string name="button_enter">Enter</string>
    <string name="button_register">Register Now</string>
    <string name="check_anonymous">Anonymous</string>
    <string name="check_remember">Remember me</string>
    
    <!-- RegisterActivity -->
    <string name="edit_login">user</string>
    <string name="edit_email">email</string>
    <string name="edit_password">password</string>
    <string name="edit_repeat_password">repeat password</string>
    <string name="noName">You must introduce a name, mail and password</string>
    <string name="wrongPass">Try again</string>
    <string name="userExist">User already exist</string>
    <string name="errorSendingData">Error inserting user in database</string>
    
    <!-- MenuActivity -->
    <string name="no_has_point">Not has points</string>
    <string name="no_has_route">Not has routes</string>
    
    <!--  Show Points -->
    <string name="no_selected_point">Please select minimum two points!</string>

    <!-- ShowRoutes -->
    <string name="button_info_route">info</string>
    <string name="noSelectedRoute">Please select a route!</string>

    <!-- ShowComments -->
    <string name="not_has_comment">no comment has been added</string>
    <string name="add_comment">Add</string>
    <string name="new_comment">Add a new comment text</string>
    <string name="error_connection">Error connection</string>
    <string name="error_not_checked_user">Datas incorrects</string>
    <string name="sorry">Sorry, only one coment and valoration for user</string>
    <string name="ok_comment">Your comment has been added</string>
    <string name="ok_valoration">Your valoration has been added</string>
    <string name="ok_comment_valoration">Your comment and valoration has been added</string>
    <string name="anonymous_users_false">Anonymous users can not insert comments or valorations</string>
    
    <!-- Map -->
	<string name="prevStep">Prev</string>
	<string name="nextStep">Next</string>
	<string name="error_map">We have a problem to get the route</string>

    <!-- Menu -->
    <string name="title_navigation">Navigations</string>
    <string name="title_markers">Show markers with navigations</string>
    <string name="title_route">Route</string>
    <string name="title_drive_route">drive route</string>
    <string name="title_bicycle_route">bicycle route</string>
    <string name="title_walking_route">walking route</string>
    <string name="title_walking_and_transport">walking and transport</string>
    <string name="title_GPS">GPS</string>
    <string name="title_location">Show my current location</string>
    <string name="title_exit">Exit</string>
    <string name="title_logo">Logo</string>
    <string name="title_skip_logo">Skip Logo activity</string>
</resources>
