<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
         Single menu item
         Set id, icon and Title for each menu item
    -->

    <item
        android:id="@+id/menu_navigations"
        android:title="@string/title_navigation">
		<menu>
            <group android:checkableBehavior="all" >
                <item
                    android:id="@+id/navigations"
                    android:title="@string/title_markers"/>
            </group>
        </menu>
     </item>
    <item
        android:id="@+id/menu_route"
        android:title="@string/title_route">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/car"
                    android:title="@string/title_drive_route"/>
                <item
                    android:id="@+id/bicycle"
                    android:title="@string/title_bicycle_route"/>
                <item
                    android:id="@+id/walk"
                    android:title="@string/title_walking_route"/>
                <item
                    android:id="@+id/walk_transport"
                    android:title="@string/title_walking_and_transport"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_gps"
        android:title="@string/title_GPS">
        <menu>
            <group android:checkableBehavior="all" >
                <item
                    android:id="@+id/myGPS"
                    android:title="@string/title_location"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/title_exit">
    </item>
    <item
        android:id="@+id/menu_logo"
        android:title="@string/title_logo">
        <menu>
            <group android:checkableBehavior="all" >
                <item
                    android:id="@+id/hideLogo"
                    android:title="@string/title_skip_logo"/>
            </group>
        </menu>
    </item>

</menu>
