<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".LoginActivity">

	<EditText
		android:id="@+id/edit_login"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:hint="@string/edit_login"
		/>
	
	<EditText
		android:id="@+id/editPsw"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/edit_password"
		/>
	
	<CheckBox
		android:id="@+id/checkAnonymous"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/check_anonymous"		
		/>
	
	<Button
		android:id="@+id/buttonEnter"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/button_enter"
		/>
	
	<Button
		android:id="@+id/buttonRegister"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/button_register"
		/>
 
</LinearLayout>