<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".RegisterActivity">
	
    <ImageView
        android:id="@+id/icon_user_rec"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/icon_user"
        style="@style/icon_menu" />

    <EditText
        android:id="@+id/userRegister"
        style="@style/edit_text"
        android:layout_toRightOf="@+id/icon_user_rec"
        android:hint="@string/edit_login"
        android:inputType="textPersonName" />
    
    <ImageView
        android:id="@+id/icon_mail_rec"
        style="@style/icon_menu"
        android:layout_below="@+id/icon_user_rec"
        android:layout_alignParentLeft="true"
        android:src="@drawable/icon_email" />
    
    <ImageView
        android:id="@+id/icon_pdw1_rec"
        style="@style/icon_menu"
        android:layout_below="@+id/icon_mail_rec"
        android:layout_alignParentLeft="true"
        android:src="@drawable/icon_pdw" />
    
    <ImageView
        android:id="@+id/icon_pdw2_rec"
        style="@style/icon_menu"
        android:layout_below="@+id/icon_pdw1_rec"
        android:layout_alignParentLeft="true"
        android:src="@drawable/icon_pdw" />

    <EditText
        android:id="@+id/pwdRegister2"
        style="@style/edit_text"
        android:layout_alignLeft="@+id/userRegister"
        android:layout_alignRight="@+id/registerAdd"
        android:layout_below="@+id/icon_pdw1_rec"
        android:ems="10"
        android:hint="@string/edit_repeat_password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pwdRegister1"
        style="@style/edit_text"
        android:layout_above="@+id/pwdRegister2"
        android:layout_alignLeft="@+id/userRegister"
        android:layout_alignRight="@+id/pwdRegister2"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/mailRegister"
        style="@style/edit_text"
        android:layout_above="@+id/pwdRegister1"
        android:layout_alignLeft="@+id/userRegister"
        android:layout_alignRight="@+id/pwdRegister1"
        android:ems="10"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/registerAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_pdw2_rec"
        android:layout_centerVertical="true"
        android:background="@drawable/state_button_standar"
        android:text="@string/button_register" />
	
</RelativeLayout>
